# MultiAgent-Novel-Translation

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_mant.bat
.agents/: AGENTS.md  PROGRESS.md
config/: settings.example.yaml
data/: README.md
data/glossary/: schema.sql
docs/: agent-design.md  architecture.md  concurrency.md  data-pipeline.md  evaluation-plan.md  observability.md  roadmap.md  segmentation.md  ui-acceptance.md
scripts/: run_baseline.py  run_m1_pipeline.py  verify_m1_output.py
src/mant/: __init__.py  cli.py  segmentation.py  textio.py
src/mant/agents/: __init__.py  base.py  editor.py  orchestrator.py  polisher.py  qa.py  terminologist.py  translator.py
src/mant/baseline/: __init__.py  translate.py
src/mant/execution/: __init__.py  checkpoint.py  manifest.py  models.py  scheduler.py
src/mant/llm/: __init__.py  client.py
src/mant/memory/: __init__.py  glossary.py  models.py  story_bible.py  tm.py  vectorstore.py
src/mant/observability/: __init__.py  dashboard.html  dashboard.py  events.py  factory.py  runtime.py  sinks.py
src/mant/pipeline/: __init__.py  align.py  clean.py  collect.py  extract_terms.py  runner.py
src/mant/workflow/: __init__.py  graph.py  state.py
tests/: __init__.py  conftest.py  test_baseline.py  test_execution.py  test_glossary.py  test_observability.py  test_pipeline_clean.py  test_pipeline_quality.py  test_quality_loop.py  test_segmentation.py  test_textio.py  test_translator_feedback.py  test_workflow.py
